# nxm-music

./: .mise.toml  Cargo.toml  rust-toolchain.toml
crates/collections/: Cargo.toml
crates/collections/src/: lib.rs
crates/nxm-music/: Cargo.toml
crates/nxm-music/migrations/: 20251221003637_create_file_nodes_table.down.sql  20251221003637_create_file_nodes_table.up.sql  20251221235439_create_libraries_table.down.sql  20251221235439_create_libraries_table.up.sql  20251225160858_create_tracks_table.up.sql
crates/nxm-music/migrations.bak/: 20251201154339_create_users_table.up.sql  20251212135507_create_artists_table.down.sql  20251212135507_create_artists_table.up.sql  20251212135544_create_tracks_table.down.sql  20251212135544_create_tracks_table.up.sql  20251212140721_create_artist_tracks_table.down.sql  20251212140721_create_artist_tracks_table.up.sql  20251212140900_create_genres_table.down.sql  20251212140900_create_genres_table.up.sql  20251212140948_create_track_genres_table.down.sql  20251212140948_create_track_genres_table.up.sql
crates/nxm-music/migrations.bak/2025-11-13-171536-0000_create_artists_table/: up.sql
crates/nxm-music/migrations.bak/2025-11-13-175610-0000_create_tracks_table/: up.sql
crates/nxm-music/migrations.bak/2025-11-13-175851-0000_create_artist_tracks_table/: down.sql  up.sql
crates/nxm-music/migrations.bak/2025-11-13-192530-0000_create_genres_table/: up.sql
crates/nxm-music/migrations.bak/2025-11-13-194434-0000_create_track_genres_table/: down.sql  up.sql
crates/nxm-music/src/: audio_handle.rs  lib.rs  library.rs  queue.rs  reexports.rs  server.rs
crates/nxm-music/src/db/: types.rs
